--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/" style="margin-left: 4vw;">Sarah Brogden Payne</a>
+    <a class="navbar-brand" href="/" style="margin-left: 4vw;">Dwyer Bradley</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation" style="margin-right: 4vw">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -57,34 +57,44 @@
 
         </div>
         <div class="main_col">
-            <h1 class="h1">Sarah Brogden Payne</h1>
-            <h2 class="h3">[sɛɹə bɹɒgdən pɛjn]  (they/she)</h2>
+            <h1 class="h1">Dwyer Bradley</h1>
+            <h2 class="h3">[Phonology Isn't Real]</h2>
             <p class="p">
-                Hi! I'm a PhD student  in Linguistics and an  <a class="a" href="https://iacs.stonybrook.edu/">
-                IACS</a> and <a class="a" href="https://www.nsfgrfp.org/">NSF GRFP</a> fellow at <a class="a" href="https://www.linguistics.stonybrook.edu/">
-                Stony Brook University</a> (entered 2022), co-advised by <a class="a" href="https://jkodner05.github.io/">Dr. Jordan Kodner</a> and
-                <a class="a" href="http://jeffreyheinz.net/"> Dr. Jeff Heinz</a>. My research interests are in language acquisition and
-                computational linguistics, with a particular focus on morphological, phonological, and morphophonological phenomena.
-                The primary goal of my work is to develop algorithmic accounts of how children learn their native language,
-                drawing both on experimental findings and formal results from computational learning theory.
+                Syntactic features belong in the fridge. There's only one vowel; it is gender fluid and not familiar with cold storage.
                 </p>
 
+            <h3 class="h3">Education</h3>
             <p class="p">
-                Before Stony Brook, I received a B.A. in <a class="a" href="https://www.ling.upenn.edu/">Linguistics</a> and
-                <a class="a" href="https://www.cis.upenn.edu/"> Computer Science </a> with a minor in
-                <a class="a" href="https://web.sas.upenn.edu/cogsci/">Cognitive Science</a> from
-                the <a class="a" href="https://www.upenn.edu/">University of Pennsylvania</a> in May 2022. At Penn, I worked
-                primarily with <a class="a" href="https://www.ling.upenn.edu/~ycharles/">Dr. Charles Yang</a>. My bachelor's thesis,
-                <a class="a" href="files/bachelors_thesis.pdf"><i>When Collisions are a Good Thing: the Acquisition of Morphological Marking</i></a>,
-                investigated how children learn which morphosyntactic features are marked in their language.
+                I received a B.A. in <a class="a" href="https://cola.unh.edu/linguistics">Linguistics</a> and
+                <a class="a" href="https://cola.unh.edu/psychology"> Psychology </a> with a minors in
+                <a class="a" href="https://cola.unh.edu/interdisciplinary-studies/program/minor/justice-studies">Justice Studies</a>, 
+                <a class="a" href="https://cola.unh.edu/interdisciplinary-studies/program/minor/forensics">Forensics</a>, and 
+                <a class="a" href="https://cola.unh.edu/languages-literatures-cultures/program/minor/russian">Russian</a>
+                from the <a class="a" href="https://www.unh.edu/">University of New Hampshire</a> in 2021. I received an M.A. in 
+                <a class="a" href="https://linguistics.stonybrook.edu/academics/Graduate/MA_Comp_Ling/index.php">Computational Linguistics</a>
+                from <a class="a" href="https://www.stonybrook.edu/">Stony Brook University</a> in 2023.
+
+                
             </p>
 
+            <h4 class="h3">Qualifications</h4>
             <p class="p">
+                 <dl>
+                    <dt>Bronx Zoo Member: 2023-2025 (Present)</dt>
+                    <dd>Contact me if interested in visit notes</dd>
+                    <dt>Axe Throwing Instructor: Years Unknown</dt>
+                    <dt>Bagpiper: Approx. 2010-2025 (Present)</dt>
+                    <dt>AI Engineer: <a class="a" href="www.linkedin.com/in/dwyer-bradley">Find me on LinkedIn</a></dt>
+                    <dd>Assorted professional certifications can be found here</dd>
+                </dl>    
+            </p>
+
+            <!--<p class="p">
                 I'm originally from <a class="a" href="https://en.wikipedia.org/wiki/Breaking_Away">Bloomington, Indiana</a>, but also grew up in the UK,
                 mainly near <a class="a" href="https://www.bbc.com/news/uk-england-suffolk-61744993">Ipswich, Suffolk</a>. I have both British
                 <a class="a" href="https://en.wikipedia.org/wiki/T-glottalization">t-glottalization</a> and American <a class="a" href="https://en.wikipedia.org/wiki/Flapping">flapping</a>,
                 so my /t/'s are a mess!
-            </p>
+            </p>-->
         </div>
     </div>
 </div>
