--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-    <title>Sarah Brogden Payne</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+    <title>Dwyer Bradley</title>
+<!--     <link rel="icon" type="image/x-icon" href="/images/favicon.png"> -->
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -32,9 +32,9 @@
 <!--            <li class="nav-item">-->
 <!--                <a class="nav-link" style="margin-left: 4vw;" href="/teaching.html">Teaching and Service</a>-->
 <!--            </li>-->
-            <li class="nav-item">
+<!--             <li class="nav-item">
                 <a class="nav-link" style="margin-left: 4vw;" href="files/cv.pdf">CV</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
@@ -43,18 +43,18 @@
         <div class="my_div">
             <img src="images/headshot2.jpg", class ="profile">
             <div class="my-auto">
-                <a class="fa fa-github icons fa-2x" href="https://github.com/paynesa"></a>
-                <a class="fa fa-twitter icons fa-2x" href="https://twitter.com/sarahrbpayne"></a>
-                <a class="ai ai-google-scholar icons fa-2x" href="https://scholar.google.com/citations?user=DDUffvQAAAAJ&hl=en"></a>
-                <a class="ai ai-semantic-scholar icons fa-2x" href="https://www.semanticscholar.org/author/50023668"></a>
-                <a class="fa fa-linkedin icons fa-2x" href="https://www.linkedin.com/in/sarah-payne-186936179/"></a>
-                <a class="fa fa-envelope icons fa-2x" href="mailto:sarah.payne@stonybrook.edu"></a>
-                <a href="http://www.starlabonline.net/">
+                <a class="fa fa-github icons fa-2x" href="https://github.com/dwyertb"></a>
+<!--                 <a class="fa fa-twitter icons fa-2x" href="https://twitter.com/sarahrbpayne"></a> -->
+<!--                 <a class="ai ai-google-scholar icons fa-2x" href="https://scholar.google.com/citations?user=DDUffvQAAAAJ&hl=en"></a>
+                <a class="ai ai-semantic-scholar icons fa-2x" href="https://www.semanticscholar.org/author/50023668"></a> -->
+                <a class="fa fa-linkedin icons fa-2x" href="www.linkedin.com/in/dwyer-bradley"></a>
+                <a class="fa fa-envelope icons fa-2x" href="mailto:dtb1014unh@gmail.com"></a>
+<!--                 <a href="http://www.starlabonline.net/">
                     <img src="images/bw.png" onmouseover="this.src='images/favicon.png'"
-                         onmouseout="this.src='images/bw.png'" class="starlab"/></a>
+                         onmouseout="this.src='images/bw.png'" class="starlab"/></a> -->
             </div>
-            <p class="pc"> <b>Office:</b> <a class="a" href="https://goo.gl/maps/jy1MUJGi8xmVpooXA"> SBS N-230</a></p>
-
+<!--             <p class="pc"> <b>Office:</b> <a class="a" href="https://goo.gl/maps/jy1MUJGi8xmVpooXA"> SBS N-230</a></p>
+ -->
         </div>
         <div class="main_col">
             <h1 class="h1">Dwyer Bradley</h1>
@@ -65,13 +65,13 @@
 
             <h3 class="h3">Education</h3>
             <p class="p">
-                I received a B.A. in <a class="a" href="https://cola.unh.edu/linguistics">Linguistics</a> and
+                I received a B.A. in 2021 at the <a class="a" href="https://www.unh.edu/">University of New Hampshire</a>, 
+                double majoring in <a class="a" href="https://cola.unh.edu/linguistics">Linguistics</a> and
                 <a class="a" href="https://cola.unh.edu/psychology"> Psychology </a> with a minors in
                 <a class="a" href="https://cola.unh.edu/interdisciplinary-studies/program/minor/justice-studies">Justice Studies</a>, 
                 <a class="a" href="https://cola.unh.edu/interdisciplinary-studies/program/minor/forensics">Forensics</a>, and 
-                <a class="a" href="https://cola.unh.edu/languages-literatures-cultures/program/minor/russian">Russian</a>
-                from the <a class="a" href="https://www.unh.edu/">University of New Hampshire</a> in 2021. I received an M.A. in 
-                <a class="a" href="https://linguistics.stonybrook.edu/academics/Graduate/MA_Comp_Ling/index.php">Computational Linguistics</a>
+                <a class="a" href="https://cola.unh.edu/languages-literatures-cultures/program/minor/russian">Russian</a>. 
+                I received an M.A. in <a class="a" href="https://linguistics.stonybrook.edu/academics/Graduate/MA_Comp_Ling/index.php">Computational Linguistics</a>
                 from <a class="a" href="https://www.stonybrook.edu/">Stony Brook University</a> in 2023.
 
                 
@@ -79,13 +79,21 @@
 
             <h4 class="h3">Qualifications</h4>
             <p class="p">
-                 <dl>
-                    <dt>Bronx Zoo Member: 2023-2025 (Present)</dt>
-                    <dd>Contact me if interested in visit notes</dd>
-                    <dt>Axe Throwing Instructor: Years Unknown</dt>
-                    <dt>Bagpiper: Approx. 2010-2025 (Present)</dt>
-                    <dt>AI Engineer: <a class="a" href="www.linkedin.com/in/dwyer-bradley">Find me on LinkedIn</a></dt>
-                    <dd>Assorted professional certifications can be found here</dd>
+                 <ul>
+                    <li>Bronx Zoo Member: 2023-2025 (Present)</li>
+                     <ul>
+                        <li>
+                            <em>Contact me if interested in visit notes</em>
+                        </li>
+                    </ul>
+                    <li>Axe Throwing Instructor: Years Unknown</li>
+                    <li>Bagpiper: Approx. 2010-2025 (Present)</li>
+                    <li>AI Engineer: <a class="a" href="www.linkedin.com/in/dwyer-bradley">Find me on LinkedIn</a></li>
+                    <ul>
+                        <li>
+                            <em>Assorted professional certifications can be found here as well</em>
+                        </li>
+                    </ul>
                 </dl>    
             </p>
 
