--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <div class="container-fluid">
     <div class="row justify-content-center" style="margin-top: 4vw">
         <div class="my_div">
-            <img src="images/headshot2.jpg", class ="profile">
+<!--             <img src="images/headshot2.jpg", class ="profile"> -->
             <div class="my-auto">
                 <a class="fa fa-github icons fa-2x" href="https://github.com/dwyertb"></a>
 <!--                 <a class="fa fa-twitter icons fa-2x" href="https://twitter.com/sarahrbpayne"></a> -->
