--- a/index.html
+++ b/index.html
@@ -74,11 +74,10 @@
                 I received an M.A. in <a class="a" href="https://linguistics.stonybrook.edu/academics/Graduate/MA_Comp_Ling/index.php">Computational Linguistics</a>
                 from <a class="a" href="https://www.stonybrook.edu/">Stony Brook University</a> in 2023.
 
-                
-            </p>
+                </p>
 
             <h4 class="h3">Qualifications</h4>
-            <p class="p">
+<!--             <p class="p"> -->
                  <ul>
                     <li>Bronx Zoo Member: 2023-2025 (Present)</li>
                      <ul>
@@ -94,8 +93,8 @@
                             <em>Assorted professional certifications can be found here as well</em>
                         </li>
                     </ul>
-                </dl>    
-            </p>
+                </ul>    
+<!--                 </p> -->
 
             <!--<p class="p">
                 I'm originally from <a class="a" href="https://en.wikipedia.org/wiki/Breaking_Away">Bloomington, Indiana</a>, but also grew up in the UK,
