--- a/research.html
+++ b/research.html
@@ -32,9 +32,9 @@
 <!--      <li class="nav-item">-->
 <!--        <a class="nav-link" style="margin-left: 4vw;" href="/teaching.html">Teaching and Service</a>-->
 <!--      </li>-->
-      <li class="nav-item">
+<!--       <li class="nav-item">
         <a class="nav-link" style="margin-left: 4vw;" href="files/cv.pdf">CV</a>
-      </li>
+      </li> -->
     </ul>
   </div>
 </nav>
