--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </div>
         <div class="main_col">
             <h1 class="h1">Dwyer Bradley</h1>
-            <h2 class="h3">[Phonology Isn't Real]</h2>
+<!--             <h2 class="h3">[Phonology Isn't Real]</h2> -->
             <p class="p">
-                Syntactic features belong in the fridge. There's only one vowel; it is gender fluid and not familiar with cold storage.
+                Syntactic features belong in the fridge. What if there's only one vowel, but it's gender fluid and that's why everyone thinks its a new guys in different contexts?
                 </p>
 
             <h3 class="h3">Education</h3>
