--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </p>
 
             <h4 class="h3">Qualifications</h4>
-<!--             <p class="p"> -->
+            <p class="p">
                  <ul>
                     <li>Bronx Zoo Member: 2023-2025 (Present)</li>
                      <ul>
@@ -94,7 +94,7 @@
                         </li>
                     </ul>
                 </ul>    
-<!--                 </p> -->
+                </p>
 
             <!--<p class="p">
                 I'm originally from <a class="a" href="https://en.wikipedia.org/wiki/Breaking_Away">Bloomington, Indiana</a>, but also grew up in the UK,
