--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             <h1 class="h1">Dwyer Bradley</h1>
 <!--             <h2 class="h3">[Phonology Isn't Real]</h2> -->
             <p class="p">
-                I forgot my syntactic features in the fridge. What if there's only one vowel, but it's gender fluid and that's why everyone thinks she's a new guy in different contexts?
+                I forgot my syntactic features in the fridge. 
+                What if there's only one vowel, but it's gender fluid and that's why everyone thinks she's a new guy in different contexts?
                 </p>
 
             <h3 class="h3">Education</h3>
