--- a/index.html
+++ b/index.html
@@ -76,7 +76,21 @@
                 from <a class="a" href="https://www.stonybrook.edu/">Stony Brook University</a> in 2023.
 
                 </p>
-
+            
+            <h4 class="h3">Qualifications</h4>
+            <ul>
+                <li>Bronx Zoo Member: 2023-2025 (Present)</li>
+                <ul>
+                    <li><em>Contact me if interested in visit notes</em></li>
+                </ul>
+                <li>Axe Throwing Instructor: Years Unknown</li>
+                <li>Bagpiper: Approx. 2010-2025 (Present)</li>
+                <li>AI Engineer: <a class="a" href="www.linkedin.com/in/dwyer-bradley">Find me on LinkedIn</a></li>
+                <ul>
+                    <li><em>Assorted professional certifications can be found here as well</em></li>
+                </ul>
+            </ul>
+<!-- 
             <h4 class="h3">Qualifications</h4>
             <p class="p">
                  <ul>
@@ -95,7 +109,7 @@
                         </li>
                     </ul>
                 </ul>    
-                </p>
+                </p> -->
 
             <!--<p class="p">
                 I'm originally from <a class="a" href="https://en.wikipedia.org/wiki/Breaking_Away">Bloomington, Indiana</a>, but also grew up in the UK,
