--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
 <!--             <h2 class="h3">[Phonology Isn't Real]</h2> -->
             <p class="p">
                 I forgot my syntactic features in the fridge. 
+            </p>
+            <p class="p">
                 What if there's only one vowel, but it's gender fluid and that's why everyone thinks she's a new guy in different contexts?
-                </p>
+            </p>
 
             <h3 class="h3">Education</h3>
             <p class="p">
@@ -74,8 +76,7 @@
                 <a class="a" href="https://cola.unh.edu/languages-literatures-cultures/program/minor/russian">Russian</a>. 
                 I received an M.A. in <a class="a" href="https://linguistics.stonybrook.edu/academics/Graduate/MA_Comp_Ling/index.php">Computational Linguistics</a>
                 from <a class="a" href="https://www.stonybrook.edu/">Stony Brook University</a> in 2023.
-
-                </p>
+            </p>
             
             <h4 class="h3">Qualifications</h4>
             <ul>
