--- a/index.html
+++ b/index.html
@@ -16,116 +16,64 @@
 <!--     <link rel="icon" type="image/x-icon" href="/images/favicon.png"> -->
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="/" style="margin-left: 4vw;">Dwyer Bradley</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation" style="margin-right: 4vw">
-        <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" style="margin-left: 4vw;" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" style="margin-left: 4vw;" href="/research.html">Research</a>
-            </li>
-<!--            <li class="nav-item">-->
-<!--                <a class="nav-link" style="margin-left: 4vw;" href="/teaching.html">Teaching and Service</a>-->
-<!--            </li>-->
-<!--             <li class="nav-item">
-                <a class="nav-link" style="margin-left: 4vw;" href="files/cv.pdf">CV</a>
-            </li> -->
-        </ul>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" style="margin-left: 4vw;" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" style="margin-left: 4vw;" href="/research.html">Research</a>
+        </li>
+      </ul>
     </div>
-</nav>
-<div class="container-fluid">
+  </nav>
+
+  <div class="container-fluid">
     <div class="row justify-content-center" style="margin-top: 4vw">
-        <div class="my_div">
-<!--             <img src="images/headshot2.jpg", class ="profile"> -->
-            <div class="my-auto">
-                <a class="fa fa-github icons fa-2x" href="https://github.com/dwyertb"></a>
-<!--                 <a class="fa fa-twitter icons fa-2x" href="https://twitter.com/sarahrbpayne"></a> -->
-<!--                 <a class="ai ai-google-scholar icons fa-2x" href="https://scholar.google.com/citations?user=DDUffvQAAAAJ&hl=en"></a>
-                <a class="ai ai-semantic-scholar icons fa-2x" href="https://www.semanticscholar.org/author/50023668"></a> -->
-                <a class="fa fa-linkedin icons fa-2x" href="www.linkedin.com/in/dwyer-bradley"></a>
-                <a class="fa fa-envelope icons fa-2x" href="mailto:dtb1014unh@gmail.com"></a>
-<!--                 <a href="http://www.starlabonline.net/">
-                    <img src="images/bw.png" onmouseover="this.src='images/favicon.png'"
-                         onmouseout="this.src='images/bw.png'" class="starlab"/></a> -->
-            </div>
-<!--             <p class="pc"> <b>Office:</b> <a class="a" href="https://goo.gl/maps/jy1MUJGi8xmVpooXA"> SBS N-230</a></p>
- -->
-        </div>
-        <div class="main_col">
-            <h1 class="h1">Dwyer Bradley</h1>
-<!--             <h2 class="h3">[Phonology Isn't Real]</h2> -->
-            <p class="p">
-                I forgot my syntactic features in the fridge. 
-            </p>
-            <p class="p">
-                What if there's only one vowel, but it's gender fluid and that's why everyone thinks she's a new guy in different contexts?
-            </p>
+      <div class="main_col">
+        <h1 class="h1">Dwyer Bradley</h1>
+        <p class="p">I forgot my syntactic features in the fridge.</p>
+        <p class="p">What if there's only one vowel, but it's gender fluid and that's why everyone thinks she's a new guy in different contexts?</p>
 
-            <h3 class="h2">Education</h3>
-            <p class="p">
-                I received a B.A. in 2021 at the <a class="a" href="https://www.unh.edu/">University of New Hampshire</a>, 
-                double majoring in <a class="a" href="https://cola.unh.edu/linguistics">Linguistics</a> and
-                <a class="a" href="https://cola.unh.edu/psychology"> Psychology </a> with a minors in
-                <a class="a" href="https://cola.unh.edu/interdisciplinary-studies/program/minor/justice-studies">Justice Studies</a>, 
-                <a class="a" href="https://cola.unh.edu/interdisciplinary-studies/program/minor/forensics">Forensics</a>, and 
-                <a class="a" href="https://cola.unh.edu/languages-literatures-cultures/program/minor/russian">Russian</a>. 
-                I received an M.A. in <a class="a" href="https://linguistics.stonybrook.edu/academics/Graduate/MA_Comp_Ling/index.php">Computational Linguistics</a>
-                from <a class="a" href="https://www.stonybrook.edu/">Stony Brook University</a> in 2023.
-                
-            </p>
-            
-            <h4 class="h2">Qualifications</h4>
-            <ul>
-                <li>Bronx Zoo Member: 2023-2025 (Present)</li>
-                <ul>
-                    <li><em>Contact me if interested in visit notes</em></li>
-                </ul>
-                <li>Axe Throwing Instructor: Years Unknown</li>
-                <li>Bagpiper: Approx. 2010-2025 (Present)</li>
-                <li>AI Engineer: <a class="a" href="www.linkedin.com/in/dwyer-bradley">Find me on LinkedIn</a></li>
-                <ul>
-                    <li><em>Assorted professional certifications can be found here as well</em></li>
-                </ul>
-            </ul>
-<!-- 
-            <h4 class="h3">Qualifications</h4>
-            <p class="p">
-                 <ul>
-                    <li>Bronx Zoo Member: 2023-2025 (Present)</li>
-                     <ul>
-                        <li>
-                            <em>Contact me if interested in visit notes</em>
-                        </li>
-                    </ul>
-                    <li>Axe Throwing Instructor: Years Unknown</li>
-                    <li>Bagpiper: Approx. 2010-2025 (Present)</li>
-                    <li>AI Engineer: <a class="a" href="www.linkedin.com/in/dwyer-bradley">Find me on LinkedIn</a></li>
-                    <ul>
-                        <li>
-                            <em>Assorted professional certifications can be found here as well</em>
-                        </li>
-                    </ul>
-                </ul>    
-                </p> -->
+        <h3 class="h2">Education</h3>
+        <p class="p">
+          I received a B.A. in 2021 at the <a class="a" href="https://www.unh.edu/">University of New Hampshire</a>, double majoring in <a class="a" href="https://cola.unh.edu/linguistics">Linguistics</a> and <a class="a" href="https://cola.unh.edu/psychology">Psychology</a> with minors in <a class="a" href="https://cola.unh.edu/interdisciplinary-studies/program/minor/justice-studies">Justice Studies</a>, <a class="a" href="https://cola.unh.edu/interdisciplinary-studies/program/minor/forensics">Forensics</a>, and <a class="a" href="https://cola.unh.edu/languages-literatures-cultures/program/minor/russian">Russian</a>. I received an M.A. in <a class="a" href="https://linguistics.stonybrook.edu/academics/Graduate/MA_Comp_Ling/index.php">Computational Linguistics</a> from <a class="a" href="https://www.stonybrook.edu/">Stony Brook University</a> in 2023.
+        </p>
 
-            <!--<p class="p">
-                I'm originally from <a class="a" href="https://en.wikipedia.org/wiki/Breaking_Away">Bloomington, Indiana</a>, but also grew up in the UK,
-                mainly near <a class="a" href="https://www.bbc.com/news/uk-england-suffolk-61744993">Ipswich, Suffolk</a>. I have both British
-                <a class="a" href="https://en.wikipedia.org/wiki/T-glottalization">t-glottalization</a> and American <a class="a" href="https://en.wikipedia.org/wiki/Flapping">flapping</a>,
-                so my /t/'s are a mess!
-            </p>-->
-        </div>
+        <h4 class="h2">Qualifications</h4>
+        <ul>
+          <li>Bronx Zoo Member: 2023-2025 (Present)</li>
+          <ul>
+            <li><em>Contact me if interested in visit notes</em></li>
+          </ul>
+          <li>Axe Throwing Instructor: Years Unknown</li>
+          <li>Bagpiper: Approx. 2010-2025 (Present)</li>
+          <li>AI Engineer: <a class="a" href="www.linkedin.com/in/dwyer-bradley">Find me on LinkedIn</a></li>
+          <ul>
+            <li><em>Assorted professional certifications can be found here as well</em></li>
+          </ul>
+        </ul>
+      </div>
     </div>
-</div>
+  </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <!-- Footer with social media links at the bottom -->
+  <footer class="footer">
+    <div class="container text-center">
+      <a class="fa fa-github icons fa-2x" href="https://github.com/dwyertb"></a>
+      <a class="fa fa-linkedin icons fa-2x" href="https://www.linkedin.com/in/dwyer-bradley"></a>
+      <a class="fa fa-envelope icons fa-2x" href="mailto:dtb1014unh@gmail.com"></a>
+    </div>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
